src/scss/_general.scss
// General Styles
//------------------------
* {
	box-sizing: border-box;
}
html,
body {
	margin: 0;
	padding: 0;
}
html {
	font-size: $base-font-size;
	font-family: $font-family;
	color: $text-color;
}
h1,
h2,
h3,
h4 {
	line-height: 1.3em;
	font-weight: 700;
	margin: 0;
}
h1 {
	font-size: 3rem;
}
h2 {
	font-size: 2.3rem;
}
h3 {
	font-size: 1.8rem;
}
h4 {
	font-size: 1.3rem;
}

a {
	color: $text-color;
	text-decoration: none;
	@include transition();

	&:visited {
		color: $text-color;
	}
}

button {
	position: relative;
	z-index: 5;
	display: inline-block;
	min-width: 200px;
	padding: 10px 15px 8px;
	border: 1px solid $text-color;
	color: $text-color;
	font-size: 1.2rem;
	font-family: $font-family;
	background-color: transparent;
	box-shadow: $box-shadow;

	&:focus {
		outline: none;
	}
	&:active {
		box-shadow: $box-shadow-active;
	}

	@media (min-width: $mobile) {
		@include transition();
		cursor: pointer;

		&:hover {
			background-color: $text-color;
			color: $blue;
		}
	}
}


// Landing
$tabSize: 80px;

$box-height-small: 60px;
$box-height: 100px;

$ad-height: 0px;// 50px;
$ad-height-tablet: 0px; // 90px;

$tripDelay-mobile: 0.5s;
$tripDelay: 0.8s;
$tripFallingDelay: 0.4s;

main {
	position: relative;
	display: block;
	height: 100vh;
	width: 100%;
	overflow: hidden;
	text-align: center;
	background-color: $main-bg;

	.trip-btn {
		display: none;
	}
	.ad-box {
		display: inline-block;
		background-color: $grey;

		&.mobile {
			@include centerX();
			bottom: 0;
			width: 320px;
			height: $ad-height;
		}
		&.desktop,
		&.tablet {
			display: none;
		}
	}

	.top-bar {
		padding: 10px 20px 10px;
		background-color: $red;

		.stars {
			display: inline-block;
			height: 35px;
			width: auto;
		}
		.odometer {
			font-size: 1rem;
			margin-bottom: 3px;
		}
		.odometer-number {
			font-size: 1.2rem;
			line-height: 1em;
		}
		.share-icons {
			position: absolute;
			z-index: 4;
			right: 100%;
			top: 0;
			display: inline-block;
			height: 100%;
			width: 100%;
			// padding: 50% 20%;
			background-color: $red;
			@include transition();

			.share-tab {
				position: absolute;
				top: 20px;
				left: calc(100% - #{$tabSize / 2});
				display: inline-block;
				width: $tabSize;
				height: $tabSize;
				background-color: $red;
				color: $white;
				border-radius: 50%;
				box-shadow: 0 0 20px -5px $black;
				@include transition();

				.arrow {
					@include centerMe();
					height: 26px;
					width: 26px;
					border-top: 2px solid $white;
					border-right: 2px solid $white;
					@include transform( translate(-30%, -50%) rotate(45deg) );
				}
			}
			.icon-wrapper {
				@include centerMe();
				display: inline-block;
			}
			.share-icon {
				display: block;
				width: 100px;
				height: auto;
				// margin: 0 auto;

				&:first-child {
					margin-bottom: 100px;
				}

				img {
					width: 100%;
					height: auto;
				}
			}

			&.noTransition {
				-webkit-transition: none;
				transition: none;
			}

			&.show {
				right: 0;
				
				.share-tab {
					@include transform( rotate(180deg) );
				}
			}
		}

		@include smallPhoneQuery () {
			.stars {
				display: none;
			}
			.odometer {
				font-size: 0.8rem;
			}
			.odometer-number {
				font-size: 1rem;
			}
		}
	}
	.quote {
		position: relative;
		z-index: 2;
		padding: 30px 20px 0;
		@include transition();

		&.hide {
			opacity: 0;
		}

		.quote-box {
			max-width: 600px;
			margin: 0 auto;
			line-height: 1.2em;
			text-shadow: 1px 1px $grey;
		}

		@include smallPhoneQuery () {
			padding-top: 15px;

			.quote-box {
				line-height: 1.1em;
			}
		}
	}
	.box {
		@include centerX();
		bottom: $ad-height;
		z-index: 2;
		display: inline-block;
		width: auto;
		height: $box-height;
		background-color: $box-color;
		box-shadow: $box-shadow;

		@include smallPhoneQuery () {
			height: $box-height-small;
		}
	}
	.drump-box {
		@include centerX();
		bottom: calc(#{$box-height} + #{$ad-height});
		z-index: 1;
		display: inline-block;
		width: 200px;
		height: auto;

		img {
			display: block;
			width: 100%;
			height: auto;
			position: absolute;
			bottom: 0;
			left: 0;

			&.fallen {
				opacity: 0;
			}
			&.falling {
				opacity: 0;
			}
		}
		@include smallPhoneQuery () {
			width: 170px;
			bottom: calc(#{$box-height-small} + #{$ad-height});
		}
	}
	.star-counter {
		position: absolute;
		bottom: $ad-height + 20px;
		left: calc(50% + 120px);
		width: 60px;
		height: 60px;
		display: inline-block;
		background-image: url('/img/star_personalcounter.svg');
		background-size: contain;
		background-position: center;
		background-repeat: no-repeat;

		.star-text {
			display: inline-block;
			padding-top: 4px;
			@include centerMe();

			line-height: 1em;
			font-size: 1.2rem;
			color: $blue;
		}
		@include smallPhoneQuery () {
			left: calc(50% + 75px)
		}
	}

	@media (min-width: $mobile) {
		.ad-box {
			&.mobile {
				display: none;
			}
			&.tablet {
				display: block;
				margin: 0 auto;
				// @include centerX();
				width: 728px;
				height: $ad-height-tablet;
			}
		}
		.top-bar {
			position: relative;
			padding-bottom: 15px;

			.top-bar-wrapper {
				display: block;
				margin: 0 auto;
				max-width: 300px;
			}
			.stars {
				height: 45px;
			}
			.odometer {
				margin-bottom: 9px;
			}
			.odometer-number {
				font-size: 1.5rem;
			}
			.share-icons {
				position: static;
				display: block;
				height: 0;
				width: 0;

				.share-tab {
					display: none;
				}
				.icon-wrapper {
					position: static;
					display: block;
					width: 0;
					height: 0;
					@include transform(none);
				}
				a.share-icon {
					@include centerY();
					display: inline-block;
					width: 54px;
					height: auto;

					&:first-child {
						margin: 0;
					}

					&.twit-icon {
						left: 18vw;
					}
					&.fb-icon {
						right: 18vw;
					}
				}
			}

		}
		.box {
			bottom: 0;
		}
		.drump-box {
			bottom: $box-height;
			height: 210px;
			transform-origin: $box-height 100%;
		}
		.trip-btn {
			display: inline-block;
			margin-top: 30px;
		}
		.quote {
			.quote-box {
				font-size: 1.3rem;
			}
		}
		.star-counter {
			bottom: 40px;
			right: calc(50% + 140px);
			left: auto;
			width: 80px;
			height: 80px;

			.star-text {
				font-size: 1.4rem;
			}
		}

		&.trip {
			.drump-box {
				@include animation(tripDesktop, 1.5s, ease-in, 0.2s);
				// background-image: url('/img/drumpf_fallen.png');

				img {
					&.standing {
						// display: none;
						@include animation(delayHide, $tripFallingDelay, ease-in);
					}
					&.falling {
						// display: none;
						@include animation(delayHide, $tripDelay - $tripFallingDelay, ease-in, $tripFallingDelay);
					}
					&.fallen {
						// display: block;
						@include animation(delayShow, $tripDelay, ease-in);
					}
				}
			}
		}
	}
	@media (min-width: $tablet) {
		.ad-box {
			&.desktop {
				position: absolute;
				display: block;
				top: 105px;
				width: 160px;
				height: 600px;
				box-shadow: 0 0 20px -5px $black;

				&.left {
					left: 0;
				}
				&.right {
					right: 0;
				}
			}
			&.tablet {
				display: none;
			}
		}
		.top-bar {

			.share-icons {
				a.share-icon {
					&.twit-icon {
						left: 25vw;
					}
					&.fb-icon {
						right: 25vw;
					}
				}
			}

		}
	}
	@media (min-width: 1500px) {
		.ad-box {
			&.desktop {
				width: 300px;
			}
		}
	}
}

.overlay {
	display: none;
	position: fixed;
	z-index: 5;
	left: 0;
	top: 0;
	height: 100%;
	width: 100%;
	background-color: rgba(0,0,0, 0.85);

	.copy-box {
		@include centerMe();
		width: 50%;
		text-align: center;

		.close-modal {
			margin-top: 20px;
		}
		.or-clause {
			margin-top: 40px;
		}
		@media (min-width: $mobile) {
			.close-modal {
				&:hover {
					color: $black;
				}
			}
		}
	}
	&.show {
		display: block;
		z-index: 6;
	}
	&.hide {
		display: none;
	}

	&.rotate-warn {
		@media (orientation: landscape) {
			display: block;
		}
		@media (min-width: $mobile) {
			display: none;
		}
	}
	&.instructions {
		.copy-box {
			img {
				display: block;
				max-height: 20vh;
				max-width: 100%;
				margin: 5vh auto;
			}
			&.desktop {
				display: none;
			}
			.close-modal {
				margin-top: 40px;
			}
		}

		@media (min-width: $mobile) {
			.copy-box {
				&.mobile {
					display: none;
				}
				&.desktop {
					display: block;
				}
			}
		}
	}
}

.ready {
	.rotate-warn {
		display: none;
	}
	
	@media (max-width: $mobile) and (orientation: landscape) {
		main {
			height: 100vw;
			width: 100vh;
			@include transform( rotate(90deg) );
			transform-origin: 50vw 50vw;

			.drump-box {
				@include animation(trip, 1s, ease-in, 0s);
				
				img {
					&.standing {
						opacity: 0;
					}
					&.falling {
						// display: none;
						@include animation(delayHide, $tripDelay-mobile, ease-in);
					}
					&.fallen {
						// display: block;
						@include animation(delayShow, $tripDelay-mobile, ease-in);
					}
				}
			}
		}
	}
}

